# LearnLab

./: .gitignore  README.md  agent.py  app.py  cli.py  components.py  config.toml  learnlab.bundle  pyproject.toml  requirements.txt  secrets.toml.example  styles.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml.example
src/learnlab/: __init__.py  agent.py  app.py  cli.py  components.py  styles.py
