[project]
name = "learnlab"
version = "0.1.0"
description = "Interactive AI Learning Platform powered by Claude"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "streamlit>=1.55.0",
]

[project.scripts]
learnlab = "learnlab.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/learnlab"
Repository = "https://github.com/your-username/learnlab"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/learnlab"]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
