[project]
name = "learnlab"
version = "0.1.0"
description = "Interactive AI Learning Platform powered by Groq + Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.1.2",
    "streamlit>=1.55.0",
]

[project.scripts]
learnlab = "learnlab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/learnlab"]

[tool.uv]
dev-dependencies = [
    "hatchling>=1.29.0",
    "ruff>=0.9.0",
]
